test_programs/compile_failure/shifting_too_much/src/main.nr
fn main() {
    let _: u64 = 1 << 128;
    let _: u64 = 1 >> 128;
}
